# Aether-GUI

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: fetch-aether.sh
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  events.rs  main.rs  state.rs
src-tauri/src/aether/: mod.rs  orphan.rs  profiles.rs  prompts.rs  pty.rs  status.rs
src/components/: AdvancedPanel.tsx  ConnectButton.tsx  ConnectionStatusLine.tsx  IpVersionToggle.tsx  LogsPanel.tsx  ProtocolSelect.tsx  ScanModeToggle.tsx  SidecarErrorScreen.tsx  TitleBar.tsx
src/state/: connectionStore.ts
src/types/: connection.ts
