[package]
name = "aether-gui"
version = "0.1.0"
description = "One-click GUI for the Aether censorship-circumvention tunnel"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
thiserror = "1"
