[package]
name = "aether-gui"
version = "0.2.0"
description = "One-click GUI for the Aether censorship-circumvention tunnel"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
thiserror = "1"
ureq = { version = "2.9", features = ["socks-proxy", "tls"] }
zip = "2.2"
tar = "0.4"
flate2 = "1.0"

[profile.dev]
opt-level = 0
debug = 0
strip = "debuginfo"
codegen-units = 256
incremental = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
